# ActIntegradora1

./: .gitignore  CMakeLists.txt  E2Team.txt  README.md  Team.txt  main  main.cpp  sonar-project.properties
.github/workflows/: build.yml  ubuntu.yml
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  funciones.cpp  funciones.h
tests/: CMakeLists.txt  test_funciones.cpp
